kubernetes/ingress-guide/test_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
  namespace: default
spec:
  selector:
    app: my-nginx
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
